# azure-relay-bridge-rs

./: Cargo.toml  Dockerfile  README.md
.github/: copilot-instructions.md
crates/azure-relay/: Cargo.toml
crates/azure-relay/src/: aad_token_provider.rs  client.rs  connection_string.rs  error.rs  http.rs  lib.rs  listener.rs  protocol.rs  stream.rs  test_utils.rs  token_provider.rs
crates/azure-relay/tests/: connection_string_tests.rs  integration_tests.rs  mock_protocol_tests.rs  parameter_validation_tests.rs  protocol_tests.rs
crates/azure-relay/tests/integration/: http_request_tests.rs  mod.rs  runtime_tests.rs  websocket_tests.rs
src/: azbridge.service  azbridge_config.machine.yml  cli.rs  com.microsoft.azbridge.plist  config.rs  config_loader.rs  host.rs  http_forward.rs  http_remote_forwarder.rs  lib.rs  logging.rs  main.rs  preamble.rs  remote_bridge.rs  service.rs  socket.rs  stream_pump.rs  tcp.rs  udp.rs
src/tui/: app.rs  log_layer.rs  mod.rs  runner.rs
src/tui/forms/: connection.rs  local_forward.rs  mod.rs  remote_forward.rs
src/tui/ui/: browse.rs  main_menu.rs  mod.rs  run.rs  scaffold.rs
tests/: bridge_integration_tests.rs
tools/: Add-Hostname.ps1  Get-Hostnames.ps1  Remove-Hostname.ps1  addhost.sh  removehost.sh
