[workspace]
members = ["crates/azure-relay", "."]
resolver = "3"

[package]
name = "azure-relay-bridge-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "azbridge_lib"
path = "src/lib.rs"

[[bin]]
name = "azbridge"
path = "src/main.rs"

[dependencies]
azure-relay = { path = "crates/azure-relay" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
regex = "1"
dirs = "6"
socket2 = "0.5"
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
azure-relay = { path = "crates/azure-relay", features = ["test-utils"] }
url = { workspace = true }

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
http = "1"
bytes = "1"
