[package]
name = "azure-relay"
version = "0.1.0"
edition = "2024"
description = "Azure Relay Hybrid Connections client library for Rust"
license = "MIT"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }

azure_identity = { version = "0.33", optional = true }
azure_core = { version = "0.33", optional = true }

[features]
default = ["azure-identity"]
azure-identity = ["dep:azure_identity", "dep:azure_core"]
test-utils = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
azure-relay = { path = ".", features = ["test-utils"] }
